samples/_failures_safe/1761728662_e2878d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c24c6ef.c: In function ‘main’:
./samples/SAFE/__tmp_5c24c6ef.c:166:20: error: missing terminating " character
  166 |             printf("Transition
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_5c24c6ef.c:166:13: error: expected expression at end of input
  166 |             printf("Transition
      |             ^~~~~~
./samples/SAFE/__tmp_5c24c6ef.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c24c6ef.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c24c6ef.c:166:13: error: expected declaration or statement at end of input
